--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capstone for JS</title>
+    <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
-    
+    <h1>Fun With Words</h1>
+    <h2>An Adventure in Sorytelling</h2>
+<p>This is a test.  It is not the real story. It is only a test.
+    <br> If it were a real story, it would have a plot, interesting characters and a clever ending.
+</p>
+<script src="js\script.js"></script>
 </body>
 </html>
