adjusted parameters, testing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <input type="text" id="color" name="story_color">
                 </li>
               </ul>
+              <p>
+                <input type="submit" 
+                       value="send" 
+                       name="Show me my story!" />
+            </p>
         </form>  
     </div>
 <script src="js\script.js"></script>
