this is a fix, again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>This is a test.  It is not the real story. It is only a test.
             <br> If it were a real story, it would have a fascinating plot, interesting characters and a clever ending.
         </p>
-        <form name "chooseWords" action="/my-story-page" method="post">
+        <form name "chooseWords" action="" method="post">
             <ul>
                 <li>
                 <label for="name"> What is your name? </label>
