switching up the css, fixed the button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>An Adventure in Sorytelling</h2>
     <div>
         <p>This is a test.  It is not the real story. It is only a test.
-            <br> If it were a real story, it would have a fascinating plot, interesting characters and a clever ending.
+        If it were a real story, it would have a fascinating plot, interesting characters and a clever ending.
         </p>
         <form name "chooseWords" action="" method="post">
             <ul>
@@ -33,11 +33,8 @@
                 <input type="text" id="color" name="story_color">
                 </li>
               </ul>
-              <p>
-                <input type="submit" 
-                       value="send" 
-                       name="Show me my story!" />
-            </p>
+              <button typ="button" form="chooseWords">Show me my story!</button>
+
         </form>  
     </div>
 <script src="js\script.js"></script>
