--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <p>This is a test.  It is not the real story. It is only a test.
         If it were a real story, it would have a fascinating plot, interesting characters and a clever ending.
         </p>
+       <!-- original html  
+           
         <form name "chooseWords" action="" method="post">
             <ul>
                 <li>
@@ -34,7 +36,7 @@
                 </li>
               </ul>
             <button typ="button" form="chooseWords">Show me my story!</button>
-        </form>  
+        </form> -->  
     </div>
 <script src="js\script.js"></script>
 </body>
